--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -17,7 +17,8 @@
     <a class="navbar-brand" href="/">Note Taker
     </a>
     <div class="icons">
-      <a href="/api/notes"><i class="fas fa-save text-light save-note"></i></a>
+      <!-- <a href="/api/notes"><i class="fas fa-save text-light save-note"></i></a> -->
+      <i class="fas fa-save text-light save-note"></i>
       <i class="fas fa-pen text-light new-note"></i>
     </div>
   </nav>
